# data-engineering

./: README.md  data_loader.py  environment.yml  gitignore  pyproject.toml  requirements.txt  write_to_db.py
api_example/: README.md  api_reader.py
data/: __init__.py  extract.py  load.py  main.py  transform.py
etl/: load.py  main.py  transform.py  validate.py
notebooks/: EDA.ipynb  EDAfinal.ipynb  README.md
parse_example/: README.md  data_parser.py
