[project]
name = "data_engineering_etl"
version = "1.0.0"
description = "ETL-пайплайн с CLI: extract/transform/load + загрузка в PostgreSQL"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Lejla", email = "you@example.com" }]
dependencies = [
  "pandas>=2.3.2",
  "numpy>=2.3.3",
  "pyarrow>=21.0.0",
  "SQLAlchemy>=2.0.44",
  "psycopg2-binary>=2.9.11",
  "python-dotenv>=1.1.1",
  "pydantic>=2.12.3",
  "pyyaml>=6.0.0",
  "requests>=2.32.3",
  "typer[all]>=0.12.3",
  "fake-useragent>=2.2.0",
  "lxml>=6.0.2",
  "matplotlib>=3.10.6",
  "seaborn>=0.13.2",
  "plotly>=6.3.1",
  "statsmodels>=0.14.5",
  "missingno>=0.5.2",
  "jupyterlab>=4.3.4",
  "gdown>=5.1.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
etl = "etl.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
